tests/ui/impl-unused-tps-inherent.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-unused-tps-inherent.rs:9:6
   |
LL | impl<T> MyType {
   |      ^ unconstrained type parameter
   |
help: Either remove the type parameter 'T' or make use of it, for example ` for S<T>`.
   |
LL - impl<T> MyType {
LL + impl<> MyType {
   |

error[E0207]: the type parameter `U` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-unused-tps-inherent.rs:17:8
   |
LL | impl<T,U> MyType1<T> {
   |        ^ unconstrained type parameter
   |
help: Either remove the type parameter 'U' or make use of it, for example ` for S<U>`.
   |
LL - impl<T,U> MyType1<T> {
LL + impl<T,> MyType1<T> {
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0207`.
